--- a/docroot/sites/all/themes/tns/assets/css/screen.css
+++ b/docroot/sites/all/themes/tns/assets/css/screen.css
@@ -41,6 +41,9 @@ img {
     display: inline-block;
     margin: 0 1.08%; }
     #block-system-main-menu .menu .leaf a {
+      display: block;
+      padding: 0 8px;
+      border: 2px solid transparent;
       text-transform: uppercase;
       text-decoration: none;
       font-weight: bold;
@@ -49,14 +52,18 @@ img {
       #block-system-main-menu .menu .leaf a:link, #block-system-main-menu .menu .leaf a:visited, #block-system-main-menu .menu .leaf a:hover, #block-system-main-menu .menu .leaf a:active, #block-system-main-menu .menu .leaf a:focus {
         color: #fff; }
       #block-system-main-menu .menu .leaf a:hover, #block-system-main-menu .menu .leaf a:active, #block-system-main-menu .menu .leaf a:focus {
-        text-decoration: underline; }
+        border-color: #fff; }
+      #block-system-main-menu .menu .leaf a.active {
+        border-color: #fff; }
 
 .social-media {
   width: 100%;
   background: #000;
-  padding: 6px 10px;
+  padding: 10px;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  font-size: 0;
+  line-height: 0; }
   .social-media li {
     list-style: none;
     display: inline-block;
@@ -120,6 +127,12 @@ img {
     @media screen and (max-width: 990px) {
       .region-footer .email-newsletter {
         padding: 20px 20px; } }
+    @media screen and (max-width: 530px) {
+      .region-footer .email-newsletter {
+        float: left;
+        padding: 10px 10px;
+        width: 100%;
+        max-width: 100%; } }
     .region-footer .email-newsletter .block-title {
       float: left;
       width: 20%;
@@ -236,8 +249,61 @@ img {
         .region-footer .email-newsletter input[type="submit"]:hover, .region-footer .email-newsletter input[type="submit"]:active, .region-footer .email-newsletter input[type="submit"]:focus {
           color: #134ecf; }
 
+.placeholder-label label {
+  display: none; }
+
 /* Pages
  * -----------------------------------------------------------------------------*/
+.not-front {
+  font-size: 14px;
+  line-height: 1.7142;
+  color: #3c3c3c; }
+  .not-front p {
+    margin-top: 1em;
+    margin-bottom: 0; }
+  .not-front #headerwrap {
+    background: url(../images/bg-nav.jpg) 0 0 repeat-x;
+    border-bottom: 1px solid #999;
+    margin: 0 0 12px 0;
+    padding: 10px 0; }
+  .not-front #header {
+    position: relative;
+    width: 100%;
+    max-width: 980px;
+    padding: 0 10px;
+    margin: 0 auto;
+    overflow: hidden; }
+  .not-front #primary-navigation {
+    position: absolute;
+    z-index: 1;
+    right: 10px;
+    bottom: 0;
+    width: 100%;
+    max-width: 720px;
+    overflow: hidden; }
+  .not-front #block-system-main-menu .menu {
+    text-align: right; }
+    .not-front #block-system-main-menu .menu .leaf a {
+      font-size: 17px; }
+  .not-front #logo {
+    position: relative;
+    z-index: 2;
+    display: block;
+    width: 20%;
+    max-width: 164px; }
+  .not-front #page-title {
+    display: none; }
+  .not-front #block-system-main {
+    width: 100%;
+    padding: 0 10px;
+    margin: 0 auto; }
+    @media screen and (max-width: 960px) {
+      .not-front #block-system-main {
+        width: 98%; } }
+  .not-front .region-content {
+    position: relative;
+    z-index: 1; }
+
 .front #logo {
   position: absolute;
   left: 70px;
@@ -256,6 +322,40 @@ img {
   line-height: 0; }
   .front .field-name-field-lp-img img {
     display: block; }
+
+.node-type-about-page #block-system-main {
+  max-width: 980px;
+  margin-bottom: 30px; }
+.node-type-about-page .content {
+  width: 100%; }
+  .node-type-about-page .content .field-name-field-image {
+    width: 100%;
+    margin-bottom: 30px; }
+    .node-type-about-page .content .field-name-field-image img {
+      display: block;
+      width: 80%;
+      margin: 0 auto; }
+  .node-type-about-page .content blockquote {
+    font-weight: bold;
+    font-size: 1.125rem;
+    line-height: 1.4;
+    width: 80%;
+    margin: 2rem auto; }
+    .node-type-about-page .content blockquote:before {
+      content: "";
+      display: block;
+      width: 350px;
+      height: 4px;
+      background: #d9d9d9;
+      margin: auto; }
+    .node-type-about-page .content blockquote:after {
+      content: "";
+      display: block;
+      width: 350px;
+      height: 4px;
+      background: #d9d9d9;
+      margin: auto;
+      margin-top: 1em; }
 
 .lp-001 #logo {
   max-width: 321px;
