--- a/docroot/sites/all/themes/tns/assets/_scss/base/_mixins.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_mixins.scss
@@ -71,3 +71,16 @@
     #{$property}: $value;
   }
 }
+
+@mixin shortBorderHorizontal($bottom: false) {
+  content: "";
+  display: block;
+  width: 350px;
+  height: 4px;
+  background: $colQuoteBorders;
+  margin: auto;
+  
+  @if $bottom {
+    margin-top: 1em;
+  }
+}
