--- a/docroot/sites/all/themes/tns/assets/_scss/page/_about.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/page/_about.scss
@@ -1,4 +1,9 @@
 .node-type-about-page {
+  #block-system-main {
+    max-width: 980px;
+    margin-bottom: 30px;
+  }
+  
   .content {
     width: 100%;
   
@@ -6,20 +11,31 @@
       width: 100%;
       
       img {
+        display: block;
         width: 80%;
         margin: 0 auto;
-        display: block;
+      }
+      
+      margin: {
+        bottom: 30px;
       }
     }
     
     blockquote {
       font-weight: bold;
-      font-size: 1.2em;
-      line-height: 1.6em;
+      font-size: 1.125rem;
+      line-height: 1.4;
       width: 80%;
-      margin: 2em auto;
-      border-top: 3px solid #ccc;
-      border-bottom: 3px solid #ccc;
+      margin: 2rem auto;
+      //border-top: 3px solid #ccc;
+      //border-bottom: 3px solid #ccc;
+      &:before {
+        @include shortBorderHorizontal();
+      }
+      
+      &:after {
+        @include shortBorderHorizontal(true);
+      }
     }
   }
 }
