--- a/docroot/sites/all/themes/tns/assets/_scss/screen.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/screen.scss
@@ -9,4 +9,6 @@
 /* Pages
  * -----------------------------------------------------------------------------*/
 @import "page/front";
+@import "page/notfront";
+@import "page/about";
 @import "page/lp";
