--- a/docroot/sites/all/themes/tns/assets/_scss/base/_variables.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_variables.scss
@@ -7,3 +7,6 @@ $colLpCpyRt: #3c3c3c;
 $footerBg: #2f2e2e;
 $colQuoteBorders: #d9d9d9;
 $gray2: #868589;
+$gray3: #7a7a7a;
+$gray4: #8d8d8d;
+$orange1: #d6aa39;
