TNS-11: Removing the about us content type which only contained the defunct content type and a context no longer in use, replaced by a context for basic internal pages which will apply to the about page, press node pages, and many others.

--- a/docroot/sites/all/themes/tns/assets/_scss/page/_about.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/page/_about.scss
@@ -1,4 +1,4 @@
-.about-us {
+.basic-internal {
   #block-system-main {
     max-width: 980px;
     margin-bottom: 30px;
@@ -6,8 +6,9 @@
   
   .content {
     width: 100%;
-  
-    .field-name-field-page-image {
+    
+    .field-name-field-page-image,
+    .field-name-field-press-item-image {
       width: 100%;
       
       img {
