TNS-6: Moved media queries out of the page files and into a new media-queries stylesheet.

--- a/docroot/sites/all/themes/tns/assets/_scss/screen.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/screen.scss
@@ -14,3 +14,7 @@
 @import "page/about";
 @import "page/tour";
 @import "page/lp";
+
+/* Misc
+ * -----------------------------------------------------------------------------*/
+@import "base/media-queries";
